Add option for microchip number field

--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-27 10:34+0100\n"
+"POT-Creation-Date: 2025-02-17 09:00+0100\n"
 "PO-Revision-Date: 2022-03-07 13:56+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -62,11 +62,11 @@ msgstr "Text"
 msgid "Limited text"
 msgstr "Begrenzter Text"
 
-msgid "Numbers-only textfield (regex)"
-msgstr "Textfeld mit nur Zahlen (regex)"
-
 msgid "Multiline with optional number of rows"
 msgstr "Mehrzeilig mit optionaler Anzahl Zeilen"
+
+msgid "Numbers-only textfield (regex)"
+msgstr "Textfeld mit nur Zahlen (regex)"
 
 msgid "Comment"
 msgstr "Kommentar"
@@ -133,6 +133,9 @@ msgstr "UID Nummer"
 
 msgid "Swiss vat number"
 msgstr "MWST Nummer"
+
+msgid "Animal identification number (Microchip-Nr.)"
+msgstr "Tieridentifikationsnummer (Mikrochip-Nr.)"
 
 msgid "Password"
 msgstr "Passwort"
