--- a/src/onegov/form/locale/rm_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/rm_CH/LC_MESSAGES/onegov.form.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-27 10:34+0100\n"
+"POT-Creation-Date: 2025-02-17 09:00+0100\n"
 "PO-Revision-Date: 2017-06-28 12:03+0200\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: Romansh\n"
@@ -57,10 +57,10 @@ msgstr ""
 msgid "Limited text"
 msgstr ""
 
-msgid "Numbers-only textfield (regex)"
+msgid "Multiline with optional number of rows"
 msgstr ""
 
-msgid "Multiline with optional number of rows"
+msgid "Numbers-only textfield (regex)"
 msgstr ""
 
 msgid "Comment"
@@ -127,6 +127,9 @@ msgid "Swiss business identifier"
 msgstr ""
 
 msgid "Swiss vat number"
+msgstr ""
+
+msgid "Animal identification number (Microchip-Nr.)"
 msgstr ""
 
 msgid "Password"
