--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2024-11-25 19:48+0100\n"
+"POT-Creation-Date: 2025-02-17 14:11+0100\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -446,6 +446,9 @@ msgstr "Conferma"
 msgid "There was an error while importing your directory!"
 msgstr "Si è verificato un errore durante l'importazione della cartella!"
 
+msgid "Download Form"
+msgstr "Scarica il modulo"
+
 msgid "Embed iFrame"
 msgstr "Incorporare iFrame"
 
@@ -637,6 +640,12 @@ msgstr ""
 msgid "Map"
 msgstr "Mappa"
 
+msgid "Links"
+msgstr "Collegamenti"
+
+msgid "More news"
+msgstr "Altre notizie"
+
 msgid "Other Entries"
 msgstr "Altri elementi"
 
@@ -645,12 +654,6 @@ msgstr "Voce precedente"
 
 msgid "Next Entry"
 msgstr "Prossima voce"
-
-msgid "Links"
-msgstr "Collegamenti"
-
-msgid "More news"
-msgstr "Altre notizie"
 
 msgid "Total Amount"
 msgstr "Importo totale"
@@ -835,6 +838,9 @@ msgstr "Attiva/disattiva schermo intero"
 
 msgid "Zoom in/out"
 msgstr "Ingrandisci/riduci"
+
+msgid "Show more"
+msgstr "Mostra di più"
 
 msgid ""
 "This space holds images from your photo-albums. To show photos add a few "
@@ -1070,15 +1076,6 @@ msgstr "Ti auguro una buona giornata!"
 msgid "Hello"
 msgstr "Ciao"
 
-msgid "Notify on newsletter unsubscription"
-msgstr "Notifica di annullamento dell'iscrizione alla newsletter"
-
-msgid "Send an email notification when a user unsubscribes from the newsletter"
-msgstr "Inviare una notifica via e-mail quando un utente si cancella dalla newsletter"
-
-msgid "The user with the address ${address} just unsubscribed from the newsletter subscriber list."
-msgstr "L'utente con l'indirizzo ${indirizzo} si è appena cancellato dalla lista degli iscritti alla newsletter."
-
 msgid ""
 "You are receiving this mail because you subscribed to the following "
 "newsletter:"
@@ -1289,6 +1286,13 @@ msgstr "Clicca qui per visualizzare la versione web."
 
 msgid "You no longer wish to receive the newsletter?"
 msgstr "Non desideri più ricevere la newsletter?"
+
+msgid ""
+"The user with the address ${address} just unsubscribed from the newsletter "
+"subscriber list."
+msgstr ""
+"L'utente con l'indirizzo ${indirizzo} si è appena cancellato dalla lista "
+"degli iscritti alla newsletter."
 
 msgid "Click the following link to set a new password:"
 msgstr "Clicca sul collegamento seguente per impostare una nuova password:"
@@ -1697,6 +1701,15 @@ msgstr "Rilascia i file per verificarli"
 
 msgid "No subscribers yet"
 msgstr "Non ci sono ancora abbonati"
+
+msgid ""
+"This recipient has delivery failures, including hard bounces, invalid email "
+"addresses, spam complaints, manual deactivations, or being blocked. We "
+"recommend unsubscribing it from the list."
+msgstr ""
+"Questo destinatario presenta errori di consegna, tra cui rimbalzi, indirizzi "
+"e-mail non validi, reclami per spam, disattivazioni manuali o blocco. Si "
+"consiglia di cancellarlo dall'elenco."
 
 msgid "submitted"
 msgstr "inviato"
@@ -2196,8 +2209,17 @@ msgstr ""
 msgid "New Note"
 msgstr "Nuova nota"
 
-msgid "This recipient has delivery failures, including hard bounces, invalid email addresses, spam complaints, manual deactivations, or being blocked. We recommend unsubscribing it from the list."
-msgstr "Questo destinatario presenta errori di consegna, tra cui rimbalzi, indirizzi e-mail non validi, reclami per spam, disattivazioni manuali o blocco. Si consiglia di cancellarlo dall'elenco."
+#~ msgid "Sign up"
+#~ msgstr "Iscriviti"
+
+#~ msgid "Notify on newsletter unsubscription"
+#~ msgstr "Notifica di annullamento dell'iscrizione alla newsletter"
+
+#~ msgid ""
+#~ "Send an email notification when a user unsubscribes from the newsletter"
+#~ msgstr ""
+#~ "Inviare una notifica via e-mail quando un utente si cancella dalla "
+#~ "newsletter"
 
 #~ msgid "Sign up to our newsletter to always stay up to date:"
 #~ msgstr "Iscriviti alla nostra newsletter per rimanere sempre aggiornato:"
