Org: Remove unconfirmed subscribers
Remove unconfirmed subscribers after 7 days of initial subscription. Also display date of subscription on recipients-view and export.

TYPE: Feature
LINK: OGC-2017

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1116,6 +1116,9 @@ msgstr "Empfänger"
 msgid "Do not actually import the newsletter subscribers"
 msgstr "Die Newsletter Abonnenten werden nicht gespeichert"
 
+msgid "Subscribed on"
+msgstr "Abonniert am"
+
 msgid "Will be used as image in the page overview on the parent page"
 msgstr ""
 "Wird als Bild in der Seitenübersicht auf der übergeordneten Seite verwendet."
